<resources>
    <string name="app_name">Papa football</string>
    <string name="matches_title">Matches</string>
    <string name="matches_tab_future">Future</string>
    <string name="matches_tab_live">Live</string>
    <string name="matches_tab_past">Past</string>
    <string name="matches_placeholder_format">This is the %1$s matches screen.</string>
    <string name="matches_placeholder_empty">There are currently no matches to display.</string>
    <string name="matches_placeholder_loading">Loading upcoming matches…</string>
    <string name="matches_placeholder_empty_live">There are no live matches right now.</string>
    <string name="matches_placeholder_loading_live">Loading live matches…</string>
    <string name="bottom_nav_schedule">Schedule</string>
    <string name="bottom_nav_highlights">Highlights</string>
    <string name="bottom_nav_teams">Teams</string>
    <string name="bottom_nav_standings">Standings</string>
    <string name="bottom_nav_settings">Settings</string>
    <string name="matches_tab_future_label">Future matches</string>
    <string name="matches_tab_live_label">Live matches</string>
    <string name="matches_tab_past_label">Past matches</string>
    <string name="bottom_nav_placeholder_message">The %1$s screen is coming soon.</string>
    <string name="season_load_error">Unable to load seasons. Please try again.</string>
    <string name="placeholder_coming_soon">Coming soon: %1$s</string>
    <string name="schedule_last_updated">Updated %1$s</string>
    <string name="schedule_last_updated_placeholder">Updated --</string>
    <string name="registration">Registration</string>
    <string name="sign_in">Sign in</string>
    <string name="favourite_teams">Favourite teams</string>
    <string name="add_team">Add Team</string>
    <string name="profile">Profile</string>
    <string name="your_profile">Your profile</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
</resources>
