<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_schedule"
        android:icon="@drawable/ic_nav_schedule"
        android:title="@string/bottom_nav_schedule" />
    <item
        android:id="@+id/menu_highlights"
        android:icon="@drawable/ic_nav_highlights"
        android:title="@string/bottom_nav_highlights" />
    <item
        android:id="@+id/menu_teams"
        android:icon="@drawable/ic_nav_teams"
        android:title="@string/bottom_nav_teams" />
    <item
        android:id="@+id/menu_standings"
        android:icon="@drawable/ic_nav_standings"
        android:title="@string/bottom_nav_standings" />
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/bottom_nav_settings" />
</menu>
